NjomaneIndustriesVPC.yaml
Description: Wordpress Architecture -VPC
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.16.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: NjomaneIndustriesVPC

  IPv6CidrBlock:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      VpcId: !Ref VPC
      AmazonProvidedIpv6CidrBlock: true

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: NjomaneIndustries-IGW

  InternetGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  RTPub:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: NjomaneIndustries-vpc-rt-pub

  RTPubDefaultIPv4:
    Type: "AWS::EC2::Route"
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId:
        Ref: RTPub
      DestinationCidrBlock: "0.0.0.0/0"

      GatewayId:
        Ref: InternetGateway

  RTPubDefaultIPv6:
    Type: "AWS::EC2::Route"
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId:
        Ref: RTPub
      DestinationIpv6CidrBlock: "::/0"
      GatewayId:
        Ref: InternetGateway

  RTAssociationPubA:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SNPUBA
      RouteTableId:
        Ref: RTPub

  RTAssociationPubB:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SNPUBB
      RouteTableId:
        Ref: RTPub

  RTAssociationPubC:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref SNPUBC
      RouteTableId:
        Ref: RTPub

  SNDBA:
    Type: AWS::EC2::Subnet
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: 10.16.16.0/20
      AssignIp6AddresssOnCreation: true
      Ipv6CidrBlock:
        Fn::Sub:
          - "${VpcPart}${SubnetPart}"
          - SubnetPart: "01::/64"
            VpcPart:
              !Select [
                0,
                !Select ["00::/56", !Select [0, !GetAtt VPC.Ipv6CidrBlocks]],
              ]
      Tags:
        - Key: Name
          Value: sn-db-A

  SNDBB:
    Type: AWS::EC2::Subnet
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: 10.16.80.0/20
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock:
        Fn::Sub:
          - "${VpcPart}${SubnetPart}"
          - SubnetPart: "05::/64"
            VpcPart:
              !Select [
                0,
                !Split ["00::/56", !Select [0, !GetAtt VPC.Ipv6CidrBlocks]],
              ]
      Tags:
        - Key: Name
          Value: sn-db-B
  SNDBC:
    Type: AWS::EC2::Subnet
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [2, !GetAZs ""]
      CidrBlock: 10.16.144.0/20
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock:
        Fn::Sub:
          - "${VpcPart}${SubnetPart}"
          - SubnetPart: "09::/64"
            VpcPart:
              !Select [
                0,
                !Split ["00::/56", !Select [0, !GetAtt VPC.Ipv6CidrBlocks]],
              ]
      Tags:
        - Key: Name
          Value: sn-db-C

   SNAPPA:
    Type: AWS::EC2::Subnet
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: 10.16.32.0/20
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock:
        Fn::Sub:
          - "${VpcPart}${SubnetPart}"
          - SubnetPart: "02::/64"
            VpcPart:
              !Select [
                0,
                !Split ["00::/56", !Select [0, !GetAtt VPC.Ipv6CidrBlocks]],
              ]
      Tags:
        - Key: Name
          Value: sn-app-A
  SNAPPB:
    Type: AWS::EC2::Subnet
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: 10.16.96.0/20
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock:
        Fn::Sub:
          - "${VpcPart}${SubnetPart}"
          - SubnetPart: "06::/64"
            VpcPart:
              !Select [
                0,
                !Split ["00::/56", !Select [0, !GetAtt VPC.Ipv6CidrBlocks]],
              ]
      Tags:
        - Key: Name
          Value: sn-app-B
  SNAPPC:
    Type: AWS::EC2::Subnet
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [2, !GetAZs ""]
      CidrBlock: 10.16.160.0/20
      AssignIpv6AddressOnCreation: true
      Ipv6CidrBlock:
        Fn::Sub:
          - "${VpcPart}${SubnetPart}"
          - SubnetPart: "0A::/64"
            VpcPart:
              !Select [
                0,
                !Split ["00::/56", !Select [0, !GetAtt VPC.Ipv6CidrBlocks]],
              ]
      Tags:
        - Key: Name
          Value: sn-app-C
  SNPUBA:
    Type: AWS::EC2::Subnet
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: 10.16.48.0/20
      MapPublicIpOnLaunch: true
      Ipv6CidrBlock:
        Fn::Sub:
          - "${VpcPart}${SubnetPart}"
          - SubnetPart: "03::/64"
            VpcPart:
              !Select [
                0,
                !Split ["00::/56", !Select [0, !GetAtt VPC.Ipv6CidrBlocks]],
              ]
      Tags:
        - Key: Name
          Value: sn-pub-A
  SNPUBB:
    Type: AWS::EC2::Subnet
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: 10.16.112.0/20
      MapPublicIpOnLaunch: true
      Ipv6CidrBlock:
        Fn::Sub:
          - "${VpcPart}${SubnetPart}"
          - SubnetPart: "07::/64"
            VpcPart:
              !Select [
                0,
                !Split ["00::/56", !Select [0, !GetAtt VPC.Ipv6CidrBlocks]],
              ]
      Tags:
        - Key: Name
          Value: sn-pub-B
  SNPUBC:
    Type: AWS::EC2::Subnet
    DependsOn: IPv6CidrBlock
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [2, !GetAZs ""]
      CidrBlock: 10.16.176.0/20
      MapPublicIpOnLaunch: true
      Ipv6CidrBlock:
        Fn::Sub:
          - "${VpcPart}${SubnetPart}"
          - SubnetPart: "0B::/64"
            VpcPart:
              !Select [
                0,
                !Split ["00::/56", !Select [0, !GetAtt VPC.Ipv6CidrBlocks]],
              ]
      Tags:
        - Key: Name
          Value: sn-pub-C


  IPv6WorkaroundSubnetPUBA:
    Type: Custom::SubnetModify
    Properties:
      ServiceToken: !GetAtt IPv6WorkaroundLambda.Arn
      SubnetId: !Ref SNPUBA
  IPv6WorkaroundSubnetPUBB:
    Type: Custom::SubnetModify
    Properties:
      ServiceToken: !GetAtt IPv6WorkaroundLambda.Arn
      SubnetId: !Ref SNPUBB
  IPv6WorkaroundSubnetPUBC:
    Type: Custom::SubnetModify
    Properties:
      ServiceToken: !GetAtt IPv6WorkaroundLambda.Arn
      SubnetId: !Ref SNPUBC
  IPv6WorkaroundRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: "/"
      Policies:
        - PolicyName: !Sub "ipv6-fix-logs-${AWS::StackName}"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: arn:aws:logs:*:*:*
        - PolicyName: !Sub "ipv6-fix-modify-${AWS::StackName}"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ec2:ModifySubnetAttribute
                Resource: "*"
  IPv6WorkaroundLambda:
    Type: AWS::Lambda::Function
    Properties:
      Handler: "index.lambda_handler"
      Code: #import cfnresponse below required to send respose back to CFN
        ZipFile:
          Fn::Sub: |
            import cfnresponse
            import boto3

            def lambda_handler(event, context):
                if event['RequestType'] is 'Delete':
                  cfnresponse.send(event, context, cfnresponse.SUCCESS)
                  return

                responseValue = event['ResourceProperties']['SubnetId']
                ec2 = boto3.client('ec2', region_name='${AWS::Region}')
                ec2.modify_subnet_attribute(AssignIpv6AddressOnCreation={
                                                'Value': True
                                              },
                                              SubnetId=responseValue)
                responseData = {}
                responseData['SubnetId'] = responseValue
                cfnresponse.send(event, context, cfnresponse.SUCCESS, responseData, "CustomResourcePhysicalID")
      Runtime: python3.9
      Role: !GetAtt IPv6WorkaroundRole.Arn
      Timeout: 30
  SGWordpress:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Control access to Wordpress Instance(s)
      SecurityGroupIngress:
        - Description: "Allow HTTP IPv4 IN"
          IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"



  SGDatabase:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Control access to Database
      SecurityGroupIngress:
        - Description: "Allow MySQL IN"
          IpProtocol: tcp
          FromPort: "3306"
          ToPort: "3306"
          SourceSecurityGroupId: !Ref SGWordpress
  SGLoadBalancer:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Control access to Load Balancer
      SecurityGroupIngress:
        - Description: "Allow HTTP IPv4 IN"
          IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"
  SGEFS:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Control access to EFS
      SecurityGroupIngress:
        - Description: "Allow NFS/EFS IPv4 IN"
          IpProtocol: tcp
          FromPort: "2049"
          ToPort: "2049"
          SourceSecurityGroupId: !Ref SGWordpress
  WordpressRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - "sts:AssumeRole"
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/AmazonElasticFileSystemClientFullAccess
  WordpressInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Path: /
      Roles:
        - !Ref WordpressRole


Outputs:
  VPC:
    Description: VPC ID
    Value: !Ref VPC
    Export:
      Name: !Sub "${AWS::StackName}-VPC"

  SGWordpress:
    Description: WordPress Security Group
    Value: !Ref SGWordpress
    Export:
      Name: !Sub "${AWS::StackName}-SGWordpress"

  SGDatabase:
    Description: Database Security Group
    Value: !Ref SGDatabase
    Export:
      Name: !Sub "${AWS::StackName}-SGDatabase"

  SGLoadBalancer:
    Description: Load Balancer Security Group
    Value: !Ref SGLoadBalancer
    Export:
      Name: !Sub "${AWS::StackName}-SGLoadBalancer"

  WordpressInstanceProfile:
    Description: WordPress Instance Profile
    Value: !Ref WordpressInstanceProfile
    Export:
      Name: !Sub "${AWS::StackName}-WordpressInstanceProfile"

  SNDBA:
    Description: Database Subnet A
    Value: !Ref SNDBA
    Export:
      Name: !Sub "${AWS::StackName}-SNDBA"

  SNDBB:
    Description: Database Subnet B
    Value: !Ref SNDBB
    Export:
      Name: !Sub "${AWS::StackName}-SNDBB"

  SNDBC:
    Description: Database Subnet C
    Value: !Ref SNDBC
    Export:
      Name: !Sub "${AWS::StackName}-SNDBC"

  SNAPPA:
    Description: Application Subnet A
    Value: !Ref SNAPPA
    Export:
      Name: !Sub "${AWS::StackName}-SNAPPA"

  SNAPPB:
    Description: Application Subnet B
    Value: !Ref SNAPPB
    Export:
      Name: !Sub "${AWS::StackName}-SNAPPB"

  SNAPPC:
    Description: Application Subnet C
    Value: !Ref SNAPPC
    Export:
      Name: !Sub "${AWS::StackName}-SNAPPC"

  SNPUBA:
    Description: Public Subnet A
    Value: !Ref SNPUBA
    Export:
      Name: !Sub "${AWS::StackName}-SNPUBA"

  SNPUBB:
    Description: Public Subnet B
    Value: !Ref SNPUBB
    Export:
      Name: !Sub "${AWS::StackName}-SNPUBB"

  SNPUBC:
    Description: Public Subnet C
    Value: !Ref SNPUBC
    Export:
      Name: !Sub "${AWS::StackName}-SNPUBC"

  SGEFS:
    Description: EFS Security Group
    Value: !Ref SGEFS
    Export:
      Name: !Sub "${AWS::StackName}-SGEFS"
